# polymarket_alpha

./: .gitignore  README.md  bot.py  main.py  pyproject.toml  test.py  test_similarity.py
helpers/: correlation_engine.py  database.py  deduplication.py  discord_bot.py  embeddings.py  polymarket.py  seed.py  x.py
