[project]
name = "x"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.5.2",
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.7",
    "langchain-google-vertexai>=2.0.27",
    "openai>=1.96.1",
    "requests>=2.32.4",
]
